fix css link and add basic styling to recipe pages

--- a/html-css-basics/odin-recipes/recipes/veg_pulao.html
+++ b/html-css-basics/odin-recipes/recipes/veg_pulao.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegetable Pulao</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
+
 </head>
 <body>
     <h1>Vegetable Pulao</h1>
