--- a/html-css-basics/odin-recipes/index.html
+++ b/html-css-basics/odin-recipes/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html" >Lasagna</a></li>
         <li><a href="recipes/chicken_curry.html" >Chicken Curry</a></li>
         <li><a href="recipes/veg_pulao.html" >Vegetable Pulao</a></li>
     </ul>
+    </div>
 </body>
-    </html>
+</html>
